{{$NEXT}}

2.63     2017-02-19

 - Updated the conflicting version for Log::Dispatch::File::Stamped in
   metadata (due to changes in handling of close_after_write). Patch by Karen
   Etheridge. GitHub #41.


2.62     2017-02-13

- Devel::Confess was accidentally being loaded in Log::Dispatch. Fixed by
  Karen Etheridge. GitHub #39.


2.61     2017-02-13

- The 2.60 release would throw an exception if the logged message was
  empty. While this makes sense, it also breaks backwards compatibility, so it
  has been reverted. Reported by Greg Oschwald. GitHub #38.

- The 2.60 release would throw an exception if you tried to create a Syslog
  output where the ident was an empty string. Reported by Greg
  Oschwald. GitHub #38.


2.60     2017-02-12

- Same as 2.59 ... Switched from Params::Validate to
  Params::ValidationCompiler. This should speed up constructors and logging a
  little bit. This also allows Log::Dispatch::File to accept things like
  Path::Tiny objects for filenames. Reported by Joel Berger. GitHub #36.


2.59     2017-02-05 (TRIAL RELEASE)

- Switched from Params::Validate to Params::ValidationCompiler. This should
  speed up constructors and logging a little bit. This also allows
  Log::Dispatch::File to accept things like Path::Tiny objects for
  filenames. Reported by Joel Berger. GitHub #36.


2.58     2016-11-13

- Switched from RT to the GitHub issue tracker.


2.57     2016-08-13

- Added a remove_callback method to the main Log::Dispatch object as well as
  all outputs. Patch by Doug Bell. GitHub #22.


2.56     2016-05-06

- Cleaned up some cruft in Pod. Some sections ended up in there twice.


2.55     2016-05-06

- The values of $@, $!, and $? are protected in various cases where they could
  end up being changed by logging code. Patch by Salvador Fandiño. GitHub #18.

- Treat MSYS2 like Cygwin in tests. Fix by Graham Ollis. GitHub #19.


2.54     2016-01-18

- Fixed File::Locked even more. While some deadlocks were eliminated, there